Child theme tweaks

--- a/wp-content/themes/generatepress_child/style.css
+++ b/wp-content/themes/generatepress_child/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: GeneratePress child
-Description: Child theme based on generatepress
+Theme Name: acta Bristol
+Description: WordPress theme for acta Bristol, based on GeneratePress
 Author: Mike Ellis
 Template: generatepress
 */
