--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -220,6 +220,11 @@
 	}
 }
 
+.hero-image {
+	flex-grow: 1;
+    object-fit: cover;
+}
+
 .featured-item-image a img {
     aspect-ratio: 4/3;
     object-fit: cover;
