Reduced featured item spacin

--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -231,12 +231,20 @@
 	margin-bottom: 10px;
 }
 
+.featured-item-text a h3 {
+	margin-bottom: 10px;
+}
+
 p.featured-item-description {
-    margin-bottom: 5px;
+    font-size: 16px;
+    margin-bottom: 15px;
 }
 
 .featured-item-readmore a {
 	color: var(--contrast-2);
+	text-decoration: underline;
+	font-size: 16px;
+    margin-bottom: 15px;
 }
 
 
