--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -263,3 +263,56 @@ p.featured-item-description {
 	margin-top: 40px;
 	margin-bottom: 40px;
 }
+
+/* Sidebar Menu */
+
+.sidebar .widget .widget-title {
+	color: #3a3a3a;
+	font-weight: 700;
+}
+
+.widget-menu .page_item_has_children ul { display: none; }
+
+.widget-menu .page_item_has_children.active > ul { display: block; }
+
+.widget ul li {
+	padding-top: 5px;
+}
+
+.widget ul li.menu-item-has-children, .widget ul li.page_item_has_children {
+	padding-bottom: 5px !important;
+}
+
+.widget ul li.page_item_has_children > a:after {
+	content: '';
+	width: 1em;
+	height: 1em;
+	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23c4476c'%3E%3Cpath d='M3 8h12v2H3z' fill='%23c4476c'/%3E%3Cpath d='M8 3h2v12H8z'/%3E%3C/svg%3E") no-repeat center center;
+	background-size: contain;
+	display: inline-block;
+	margin-left: 5px;
+	position: relative;
+	top: 3px;
+}
+
+.widget ul li a {
+	position: relative;
+}
+
+.widget ul li a:before {
+	content: "\f107";
+	font-family: GeneratePress;
+	display: block;
+	width: 0.8em;
+	font-size: 18px;
+	text-align: center;
+	margin-left: 5px;
+	vertical-align: middle;
+	transform: rotate(-90deg);
+	position: absolute;
+		left: -1.2em;
+}
+
+.widget ul li.page_item_has_children.active > a:after {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23c4476c'%3E%3Cpath d='M3 8h12v2H3z'/%3E%3C/svg%3E");
+}
