--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -267,7 +267,7 @@ p.featured-item-description {
 /* Sidebar Menu */
 
 .sidebar .widget .widget-title {
-	color: #3a3a3a;
+	color: #3a3a3a !important;
 	font-weight: 700;
 }
 
