Revert to white background on sidebar widgets

--- a/wp-content/plugins/thirty8-gp-helper/css/sidebars.css
+++ b/wp-content/plugins/thirty8-gp-helper/css/sidebars.css
@@ -14,7 +14,7 @@
 .widget_pages,
 .widget_share,
 .widget_shortcode {
-	background-color: var(--base) !important;
+	/* background-color: var(--base) !important; */
 }
 
 .widget h2 {
