--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -322,3 +322,21 @@ p.featured-item-description {
 .widget ul li.page_item_has_children.active > a:after {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23c4476c'%3E%3Cpath d='M3 8h12v2H3z'/%3E%3C/svg%3E");
 }
+
+/* Whats on archive listing */
+
+.acta-whatson-item {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-gap: 20px;
+}
+
+.acta-whatson-image {
+	grid-column: 1 / 2;
+	padding: 20px;
+}
+
+.acta-whatson-text {
+	grid-column: 2 / 3;
+	padding: 20px;
+}
