--- a/wp-content/themes/acta-bristol/css/style.css
+++ b/wp-content/themes/acta-bristol/css/style.css
@@ -364,3 +364,32 @@ p.featured-item-description {
 	padding: 20px;
 	margin-bottom: 30px;
 }
+
+/* Book now */
+
+.booknow-button {
+	background-color: var(--contrast);
+}
+
+.booknow-button a {
+	color: #ffffff;
+}
+
+.entry-content p a {
+	color: var(--contrast);
+	text-decoration: underline;
+}
+
+/* Sponsor items grid in footer */
+
+.sponsor-listing {
+	grid-gap: 0px;
+}
+
+.sponsor-item {
+	padding: 0px;
+}
+
+.sponsor-item img {
+	max-height: 60px;
+}
