--- a/wp-content/themes/acta-bristol/customiser.css
+++ b/wp-content/themes/acta-bristol/customiser.css
@@ -1,13 +1,1 @@
-.booknow-button{
-	background-color: var(--contrast);
-}
-
-.booknow-button a{
-	color:#ffffff;
-}
-
-.entry-content p a{
-	color:var(--contrast);
-	text-decoration:underline;
-}
-
+/* Unused! Use style.css in theme */
