--- a/wp-content/plugins/media-library-helper/assets/styles/admin.css
+++ b/wp-content/plugins/media-library-helper/assets/styles/admin.css
@@ -14,6 +14,10 @@ table.media .column-title .has-media-icon ~ .row-actions {
     margin-bottom: 5px;
 }
 
+table.media .column-title .has-media-icon .add-bg {
+    margin-left: 70px;
+}
+
 .full-width {
     width: 100%;
     display: block;
