--- a/wp-content/plugins/thirty8-analytics/css/style.css
+++ b/wp-content/plugins/thirty8-analytics/css/style.css
@@ -14,22 +14,25 @@
 
 .cookie-grid {
 	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-gap: 20px;
+	grid-template-columns: 70% 30%;
+	padding:10px;
 }
 
 .cookie-grid-item {
-	padding: 20px;
-}
-
-.wide {
-	grid-column: 1 / span 2;
-}
-
-.narrow {
-	grid-column: 2 / span 1;
 }
 
 .cookie-grid-item p {
-	font-size: 14px !important;
+	font-size: 12px !important;
+}
+
+.cookie-button{
+  background-color: #000000;
+  color:#ffffff;
+  border: 1px solid #ffffff;
+  color: white;
+  padding: 10px 10px !important;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px !important;
 }
